--- a/LeShare/Views/AboutPage.xaml
+++ b/LeShare/Views/AboutPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
 
     
-    <Grid Margin="0,-23,0,0">
+    <Grid>
         <Grid.Background>
             <ImageBrush Stretch="Fill" ImageSource="ms-appx:///Assets/Images/BackGround.png"/>
         </Grid.Background>
