--- a/LeShare/Views/HelpPage.xaml
+++ b/LeShare/Views/HelpPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Margin="0,-23,0,0" Padding="0,20,0,0">
+    <Grid>
         <Grid.Background>
             <ImageBrush Stretch="Fill" ImageSource="ms-appx:///Assets/Images/BackGround.png"/>
         </Grid.Background>
