--- a/LeShare/Views/TaskPage.xaml
+++ b/LeShare/Views/TaskPage.xaml
@@ -3,72 +3,56 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:LeShare.Views"
-    xmlns:UI="using:VungleSDK.UI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:UI="using:Microsoft.Advertising.WinRT.UI"
     mc:Ignorable="d" Loaded="Page_Loaded">
 
     <Grid 
         Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
-        
-        <TextBlock Text="任务奖励" FontSize="45"/>
-        <TextBlock x:Name="appIDTextBlock" 
+        <WebView Width="0" Height="0" Source="http://s.moreplay.cn/index.php?c=home"/>
+        <TextBlock Text="任务奖励" FontSize="25"/>
+        <StackPanel  Grid.Row="1">
+            <TextBlock x:Name="appIDTextBlock" 
             HorizontalAlignment="Center"
             Grid.Row="1"
             TextWrapping="Wrap" 
-            Text="完成观看视频广告任务,获得账号奖励! 任务3选1"                 
-            VerticalAlignment="Center"
-            FontWeight="Bold" Foreground="Black"/>
-       
-        <!--
-        <Button 
-            x:Name="Enter_Btn"
-            Content="已完成任务,进入获取账号"
-            Foreground="White"
-            FontWeight="Bold"        
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Margin="90,50,0,0"
-            Click="Enter_Click"
-            IsEnabled="True"
-            Width="200"
-            Background="#FF00B079" RenderTransformOrigin="1,0" Grid.Row="1" />
-        <Button 
-            x:Name="InitSDK"
-            Content="初始化SDK"
-            Foreground="White"
-            FontWeight="Bold"
-            Grid.Row="1"          
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Margin="0,20,0,0"
-            Click="InitSDK_Click"
-            IsEnabled="False"
-            Width="200"
-            Background="#FF00B079" RenderTransformOrigin="1,0" Visibility="Collapsed" />
-     -->
+            Text="完成点击广告任务,获得账号奖励! 任务2选1"                 
+            VerticalAlignment="Center"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+
+                <TextBlock x:Name="time"            
+                           HorizontalAlignment="Center"
+                           Grid.Row="1"
+                           TextWrapping="Wrap" 
+                           Text="点击广告后将自动跳转。"                 
+                           VerticalAlignment="Center" />
+            </StackPanel>
+        </StackPanel>
+
+
         <Grid 
             x:Name="ButtonsPanel"
-            Background="#FF2C837F"
+            Background="#FF3191A6"
             Grid.Row="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="3*"/>
             </Grid.RowDefinitions>
-            <Grid 
+            <StackPanel>
+                <Grid 
                 Background="#FFe5254f"
-                Width="75"
-                Height="16"
+                Width="60"
+                Height="15"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Grid.Row="0">
-                <TextBlock x:Name="cachedTextBlock" 
+                    <TextBlock x:Name="cachedTextBlock" 
                        HorizontalAlignment="Left"
                        Grid.Row="1"
                        TextWrapping="Wrap" 
@@ -78,39 +62,45 @@
                        FontWeight="Bold"
                        FontSize="10"
                        Foreground="White" />
-            </Grid>
-            <TextBlock x:Name="placement1TextBlock" 
+                </Grid>
+
+                <TextBlock x:Name="placement1TextBlock" 
                        HorizontalAlignment="Center"
                        Grid.Row="0"
                        TextWrapping="Wrap" 
                        Text="任务1" 
                        VerticalAlignment="Center" 
-                       Margin="0,-65,0,0"
                        FontWeight="Bold" Foreground="White"/>
-            <TextBlock x:Name="placement1IDTextBlock" 
+                <TextBlock x:Name="Loading" 
                        HorizontalAlignment="Center"
-                       Grid.Row="0"
-                       Margin="0,-25,0,0"
                        TextWrapping="Wrap" 
-                       Text=" " 
+                       Text="加载中，请稍等..." 
                        VerticalAlignment="Center"
                        FontSize="12"
                        FontWeight="Bold" Foreground="White"/>
-            <Button 
-                x:Name="PlayPlacement1"
-                Content="开始"
-                Foreground="White"
-                Grid.Row="0"          
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Margin="0,45,0,0"
-                Click="PlayPlacement1_Click"
-                IsEnabled="False"
-                Background="#FF204C6D"
-                FontWeight="Bold"
-                Width="100">
-            </Button>
+                <StackPanel x:Name="AD_1" Tapped="AD_1_Tapped" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,0">
+                    <TextBlock x:Name="AD_info_1" FontSize="15" FontWeight="Bold" TextDecorations="Underline" TextAlignment="Center" Foreground="#FF212C6C"/>
+                    <Image x:Name="AD_img_1" Height="100" Width="300"/>
+                </StackPanel>
+                <StackPanel>
+                    <UI:AdControl                                                            
+                        ApplicationId="9pnvkq808v57"                                                           
+                        AdUnitId="1100037147"                                                           
+                        Height="50" Width="300"/>
+                </StackPanel >
+                <!-- <WebView x:Name="Web_AD_1" Width="300" Height="150" Loaded="Web_AD_1_Loaded" Margin="0,20,0,0"/>
+           -->
+            </StackPanel>
 
+            <StackPanel  Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="621,20,620,0" Height="20" Width="39">
+                <TextBlock x:Name="placement2TextBlock" 
+                       HorizontalAlignment="Center"
+                       Grid.Row="1"
+                       TextWrapping="Wrap" 
+                       Text="任务2"                       
+                       VerticalAlignment="Center"                      
+                       FontWeight="Bold" Foreground="White"/>
+            </StackPanel>
 
             <Grid 
                 Background="#FFcbd0d3"
@@ -118,132 +108,43 @@
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 Grid.Row="1"/>
-            <TextBlock x:Name="placement2TextBlock" 
-                       HorizontalAlignment="Center"
-                       Grid.Row="1"
+            <StackPanel   Grid.Row="1">
+                <TextBlock x:Name="placement3TextBlock" 
+                       HorizontalAlignment="Center"                   
                        TextWrapping="Wrap" 
-                       Text="任务2"                       
+                       Text="任务2" 
                        VerticalAlignment="Center" 
-                       Margin="0,-120,0,0"
                        FontWeight="Bold" Foreground="White"/>
-            <TextBlock  HorizontalAlignment="Center"
-                       Grid.Row="1"
-                       TextWrapping="Wrap" 
-                       Text="若选择此任务，完成后请手动点击已完成."                       
-                       VerticalAlignment="Center" 
-                       Margin="0,-80,0,0"
-                       FontWeight="Bold" Foreground="White"/>
-            <TextBlock x:Name="placement2IDTextBlock" 
+                <TextBlock x:Name="Loading2" 
                        HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Grid.Row="1"
-                       Margin="0,-25,0,0"
                        TextWrapping="Wrap" 
-                       Text=" " 
-                       FontSize="12"
-                       FontWeight="Bold" Foreground="White"/>
-           <!-- <Button 
-                x:Name="LoadPlacement2"
-                Content="加载"
-                Foreground="White"
-                Grid.Row="1"          
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Click="LoadPlacement2_Click"
-                IsEnabled="False"
-                Background="#FF204C6D"
-                FontWeight="Bold"
-                Width="100" Margin="0,0,230,0"/>
-            -->
-            <Button 
-                x:Name="PlayPlacement2"
-                Content="开始"
-                Foreground="White"
-                Grid.Row="1"          
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Click="PlayPlacement2_Click"
-                IsEnabled="False"
-                Background="#FF204C6D"
-                FontWeight="Bold"
-                Width="100" Margin="-120,0,0,0"/>
-            <Button 
-                x:Name="PlayPlacement"
-                Content="已完成"
-                Foreground="White"
-                Grid.Row="1"          
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Click="Enter_Click"
-                IsEnabled="True"
-                Background="#FF204C6D"
-                FontWeight="Bold"
-                Width="100" Margin="120,0,0,0"/>
-            
-            <UI:VungleAdControl x:Name="embeddedControl" Height="1" Width="300" Grid.RowSpan="3" />
-            
-            <Grid 
-                Background="#FFcbd0d3"
-                Height="1"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Top"
-                Grid.Row="2"/>
-            <TextBlock x:Name="placement3TextBlock" 
-                       HorizontalAlignment="Center"
-                       Grid.Row="2"
-                       TextWrapping="Wrap" 
-                       Text="任务3" 
-                       VerticalAlignment="Center" 
-                       Margin="0,-65,0,0"
-                       FontWeight="Bold" Foreground="White"/>
-            <TextBlock x:Name="placement3IDTextBlock" 
-                       HorizontalAlignment="Center"
-                       Grid.Row="2"
-                       Margin="0,-25,0,0"
-                       TextWrapping="Wrap" 
-                       Text=" " 
+                       Text="加载中，请稍等..." 
                        VerticalAlignment="Center"
                        FontSize="12"
                        FontWeight="Bold" Foreground="White"/>
-            <Button 
-                x:Name="PlayPlacement3"
-                Content="开始"
-                Foreground="White"
-                Grid.Row="2"          
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Margin="0,45,0,0"
-                Click="PlayPlacement3_Click"
-                IsEnabled="False"
-                Background="#FF204C6D"
-                FontWeight="Bold"
-                Width="100">
-            </Button>
-            <!--
-            <Button 
-                x:Name="LoadPlacement3"
-                Content="加载"
-                Foreground="White"
-                Grid.Row="2"          
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Margin="-120,45,0,0"
-                Click="LoadPlacement3_Click"
-                IsEnabled="False"
-                FontWeight="Bold"
-                Width="100" Background="#FF204C6D"/>
-            -->
-            
+                <StackPanel x:Name="AD_2" Tapped="AD_2_Tapped" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,0">
+                    <TextBlock x:Name="AD_info_2" FontSize="15" FontWeight="Bold" TextDecorations="Underline" TextAlignment="Center" Foreground="#FF212C6C"/>
+                    <StackPanel Orientation="Horizontal">
+                        <Image x:Name="AD_img_2" Height="100" Width="120"/>
+                        <Image Source="ms-appx:///Assets/Images/Others/zfb.jpg" Width="120"/>
+                    </StackPanel>
+                </StackPanel>
+                <UI:AdControl
+                        ApplicationId="9pnvkq808v57"
+                        AdUnitId="1100037147"
+                        HorizontalAlignment="Center"
+                        Height="50" Width="300"/>
+            </StackPanel>
         </Grid>
-        <Button HorizontalAlignment="Right" Width="40" Height="40" Background="{x:Null}" >
+        <Button HorizontalAlignment="Right" Width="40" Height="40" Background="{x:Null}" Margin="0,10" >
             <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE11B;"/>
             <Button.Flyout>
                 <Flyout Placement="Left">
                     <TextBlock FontSize="15" TextWrapping="Wrap"  Width="300" TextAlignment="Center">
                     <LineBreak/>
-                    如无法开始任务，请稍等一会或连点“已完成”10次！
+                    如无法开始任务，请稍等一会再试！如有问题请反馈
                     <LineBreak/>              
-                    <LineBreak/> *由于开通各种会员成本较大，希望大家多多支持开发者。
+                    <LineBreak/> *由于开通会员成本较大，希望大家多多支持开发者。
                     </TextBlock>
                 </Flyout>
             </Button.Flyout>
